--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -33,19 +33,10 @@
 }
 
 .Cyro {
-  width : 100%;
-  &__Pad {
-    diplay       : block;
-    position     : fixed;
-    left         : 0;
-    width        : 5px;
-    height       : 10%;
-    background   : black;
-    transform-origin: 50%;
-  }
-}
-
-@keyframes cyro {
-  0%   { left :   0%; }
-  100% { left : 100%; }
+  width    : 100%;
+  position : fixed;
+  left     : 0;
+  top      : 0;
+  width    : 100%;
+  height   : 100%;
 }
