--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -12,6 +12,7 @@
   margin-top : -60px;
   background : black;
   opacity    : 0.9;
+  z-index    : 10;
 
   &__Input {
     position    : absolute;
