--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -34,10 +34,18 @@
 }
 
 .Cyro {
-  width    : 100%;
   position : fixed;
   left     : 0;
   top      : 0;
   width    : 100%;
   height   : 100%;
+}
+
+.Clicker {
+  position : fixed;
+  left     : 0;
+  top      : 0;
+  width    : 100%;
+  height   : 100%;
+  z-index  : 2;
 }
