--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,7 +3,7 @@
   padding : 0;
 }
 
-.BPMSlider {
+.Config {
   position   : fixed;
   width      : 90%;
   height     : 120px;
@@ -15,7 +15,9 @@
   z-index    : 10;
 
   &--hidden { display: none; }
+}
 
+.BPMSlider {
   &__Input {
     position    : absolute;
     left        : 100px;
