--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,13 +3,19 @@
   padding : 0;
 }
 
+// variables
+$left          : 140px;
+$row           : 90px;
+$margin        : 10px;
+$config-height : $row * 2 + $margin * 3;
+
 .Config {
   position   : fixed;
   width      : 90%;
-  height     : 120px;
+  height     : $config-height;
   top        : 50%;
   left       : 5%;
-  margin-top : -60px;
+  margin-top : -($config-height / 2);
   background : black;
   opacity    : 0.9;
   z-index    : 10;
@@ -18,24 +24,57 @@
 }
 
 .BPMSlider {
-  &__Input {
-    position    : absolute;
-    left        : 100px;
-    width       : calc(100% - 100px);
-    height      : 100%;
-    font-weight : bold;
-  }
+  position : relative;
+  height   : $row;
+  width    : 96%;
+  margin   : $margin auto;
 
   &__Label {
     position       : absolute;
     left           : 0;
-    width          : 100px;
+    width          : $left;
     height         : 100%;
-    line-height    : 120px;
+    line-height    : $row;
     vertical-align : middle;
     color          : white;
   }
+
+  &__Input {
+    position    : absolute;
+    left        : $left;
+    width       : calc(100% - #{$left});
+    height      : 100%;
+  }
 }
+
+.LoopCount {
+  position       : relative;
+  height         : $row;
+  width          : 96%;
+  margin         : $margin auto;
+  line-height    : $row;
+  color          : white;
+  vertical-align : middle;
+
+  &__Label {
+    display : inline-block;
+    width   : $left;
+  }
+  &__Count {
+    display    : inline-block;
+    width      : 40px;
+    text-align : center;
+  }
+  &__Increment,
+  &__Decrement {
+    display    : inline-block;
+    width      : 22px;
+    text-align : center;
+    font-size  : 20px;
+    cursor     : pointer;
+  }
+}
+
 
 .Cyro {
   position : fixed;
